* (bug 23563) Old skins now support $wgUploadNavigationUrl and take into account upload rights.
* (bug 1347) Render \phi in math using images, in order to create consistent and correct render results.
* (bug 16573) Render \epsilon in math using images, in order to create consistent and correct render results.
* (bug 22541) Support image redirects when using ForeignAPIRepo

=== API changes in 1.17 ===
* (bug 22738) Allow filtering by action type on query=logevent
* (bug 22764) uselang parameter for action=parse
* (bug 22944) API: watchlist options are inconsistent
* (bug 22339) "Go" result should be available through the API
* (bug 22868) don't list infinite block expiry date as "now" in API logevents
* (bug 22290) prop=revisions now outputs "comment" field even when comment
  is empty, for consistency with list=recentchanges
* (bug 19721) API action=help should have a way to just list for a specific module
* (bug 23458) Add support for pageid parameter to action=parse requests
* (bug 23460) Parse action should have a section option
* (bug 21346) Make deleted images searchable by hash
* (bug 23461) Normalise usage of parameter names in parameter descriptions
* (bug 23548) Allow access of another users watchlist through watchlistraw using token and username
* (bug 23524) Api Modules as followup to bug 14473 (Add iwlinks table to track inline interwiki link usage

=== Languages updated in 1.17 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of MediaZilla reports.

* Latgalian (ltg) (new)
* Rusyn (rue) (new)

* (bug 23156) Commafy and search normalization updated for Belarusian
  (Taraškievica)
* (bug 23283) Native name for Old English -> Ænglisc
* (bug 23364) Native name for Azerbaijani -> Azərbaycanca

== Compatibility ==

MediaWiki 1.17 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer
supported.
